implementando datePicker nos campos de data

--- a/SisVest.WebUI/SisVest.WebUI.csproj
+++ b/SisVest.WebUI/SisVest.WebUI.csproj
@@ -191,14 +191,72 @@
     <Content Include="Content\themes\base\minified\jquery.ui.slider.min.css" />
     <Content Include="Content\themes\base\minified\jquery.ui.tabs.min.css" />
     <Content Include="Content\themes\base\minified\jquery.ui.theme.min.css" />
+    <Content Include="Content\themes\start\images\ui-bg_flat_0_aaaaaa_40x100.png" />
+    <Content Include="Content\themes\start\images\ui-bg_flat_75_ffffff_40x100.png" />
+    <Content Include="Content\themes\start\images\ui-bg_glass_55_fbf9ee_1x400.png" />
+    <Content Include="Content\themes\start\images\ui-bg_glass_65_ffffff_1x400.png" />
+    <Content Include="Content\themes\start\images\ui-bg_glass_75_dadada_1x400.png" />
+    <Content Include="Content\themes\start\images\ui-bg_glass_75_e6e6e6_1x400.png" />
+    <Content Include="Content\themes\start\images\ui-bg_glass_95_fef1ec_1x400.png" />
+    <Content Include="Content\themes\start\images\ui-bg_highlight-soft_100_eeeeee_1x100.png" />
+    <Content Include="Content\themes\start\images\ui-bg_highlight-soft_75_cccccc_1x100.png" />
+    <Content Include="Content\themes\start\images\ui-icons_222222_256x240.png" />
+    <Content Include="Content\themes\start\images\ui-icons_2e83ff_256x240.png" />
+    <Content Include="Content\themes\start\images\ui-icons_454545_256x240.png" />
+    <Content Include="Content\themes\start\images\ui-icons_888888_256x240.png" />
+    <Content Include="Content\themes\start\images\ui-icons_cd0a0a_256x240.png" />
+    <Content Include="Content\themes\start\jquery-ui-1.8.20.custom.css" />
+    <Content Include="Content\themes\start\jquery-ui.css" />
+    <Content Include="Content\themes\start\jquery.ui.accordion.css" />
+    <Content Include="Content\themes\start\jquery.ui.all.css" />
+    <Content Include="Content\themes\start\jquery.ui.autocomplete.css" />
+    <Content Include="Content\themes\start\jquery.ui.base.css" />
+    <Content Include="Content\themes\start\jquery.ui.button.css" />
+    <Content Include="Content\themes\start\jquery.ui.core.css" />
+    <Content Include="Content\themes\start\jquery.ui.datepicker.css" />
+    <Content Include="Content\themes\start\jquery.ui.dialog.css" />
+    <Content Include="Content\themes\start\jquery.ui.progressbar.css" />
+    <Content Include="Content\themes\start\jquery.ui.resizable.css" />
+    <Content Include="Content\themes\start\jquery.ui.selectable.css" />
+    <Content Include="Content\themes\start\jquery.ui.slider.css" />
+    <Content Include="Content\themes\start\jquery.ui.tabs.css" />
+    <Content Include="Content\themes\start\jquery.ui.theme.css" />
+    <Content Include="Content\themes\start\minified\images\ui-bg_flat_0_aaaaaa_40x100.png" />
+    <Content Include="Content\themes\start\minified\images\ui-bg_flat_75_ffffff_40x100.png" />
+    <Content Include="Content\themes\start\minified\images\ui-bg_glass_55_fbf9ee_1x400.png" />
+    <Content Include="Content\themes\start\minified\images\ui-bg_glass_65_ffffff_1x400.png" />
+    <Content Include="Content\themes\start\minified\images\ui-bg_glass_75_dadada_1x400.png" />
+    <Content Include="Content\themes\start\minified\images\ui-bg_glass_75_e6e6e6_1x400.png" />
+    <Content Include="Content\themes\start\minified\images\ui-bg_glass_95_fef1ec_1x400.png" />
+    <Content Include="Content\themes\start\minified\images\ui-bg_highlight-soft_75_cccccc_1x100.png" />
+    <Content Include="Content\themes\start\minified\images\ui-icons_222222_256x240.png" />
+    <Content Include="Content\themes\start\minified\images\ui-icons_2e83ff_256x240.png" />
+    <Content Include="Content\themes\start\minified\images\ui-icons_454545_256x240.png" />
+    <Content Include="Content\themes\start\minified\images\ui-icons_888888_256x240.png" />
+    <Content Include="Content\themes\start\minified\images\ui-icons_cd0a0a_256x240.png" />
+    <Content Include="Content\themes\start\minified\jquery-ui.min.css" />
+    <Content Include="Content\themes\start\minified\jquery.ui.accordion.min.css" />
+    <Content Include="Content\themes\start\minified\jquery.ui.autocomplete.min.css" />
+    <Content Include="Content\themes\start\minified\jquery.ui.button.min.css" />
+    <Content Include="Content\themes\start\minified\jquery.ui.core.min.css" />
+    <Content Include="Content\themes\start\minified\jquery.ui.datepicker.min.css" />
+    <Content Include="Content\themes\start\minified\jquery.ui.dialog.min.css" />
+    <Content Include="Content\themes\start\minified\jquery.ui.progressbar.min.css" />
+    <Content Include="Content\themes\start\minified\jquery.ui.resizable.min.css" />
+    <Content Include="Content\themes\start\minified\jquery.ui.selectable.min.css" />
+    <Content Include="Content\themes\start\minified\jquery.ui.slider.min.css" />
+    <Content Include="Content\themes\start\minified\jquery.ui.tabs.min.css" />
+    <Content Include="Content\themes\start\minified\jquery.ui.theme.min.css" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
     <None Include="Scripts\jquery-1.7.1.intellisense.js" />
     <Content Include="Scripts\jquery-1.7.1.js" />
     <Content Include="Scripts\jquery-1.7.1.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
+    <Content Include="Scripts\jquery-ui-1.8.11.min.js" />
     <Content Include="Scripts\jquery-ui-1.8.20.js" />
     <Content Include="Scripts\jquery-ui-1.8.20.min.js" />
+    <Content Include="Scripts\jquery-ui.ui.i18n.datepicker-pt-BR.js" />
     <Content Include="Scripts\jquery.validate.js" />
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\modernizr-2.5.3.js" />
