--- a/SisVest.WebUI/Web.config
+++ b/SisVest.WebUI/Web.config
@@ -17,7 +17,7 @@
   <system.web>
     <compilation debug="true" targetFramework="4.5.1" />
     <authentication mode="Forms">
-      <forms loginUrl="~/Account/LogOn" timeout="2880" />
+      <forms loginUrl="~/Autenticacao/Entrar" timeout="2880" />
     </authentication>
     <pages>
       <namespaces>
