deinfindo o provider de autenticacao e criando novo diretorio Provider dentro de Infraestrutura

--- a/SisVest.WebUI/SisVest.WebUI.csproj
+++ b/SisVest.WebUI/SisVest.WebUI.csproj
@@ -133,6 +133,8 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Infraestrutura\NinjectControllerFactory.cs" />
+    <Compile Include="Infraestrutura\Provider\Abstract\IAutenticacaoProvider.cs" />
+    <Compile Include="Infraestrutura\Provider\Concrete\CustomAutenticacaoProvider.cs" />
     <Compile Include="Models\AutenticacaoModel.cs" />
     <Compile Include="Models\CursoModel.cs" />
     <Compile Include="Models\VestibularModel.cs" />
