--- a/SisVest.WebUI/SisVest.WebUI.csproj
+++ b/SisVest.WebUI/SisVest.WebUI.csproj
@@ -132,6 +132,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Infraestrutura\Filter\TesteFiltroAttribute.cs" />
     <Compile Include="Infraestrutura\NinjectControllerFactory.cs" />
     <Compile Include="Infraestrutura\Provider\Abstract\IAutenticacaoProvider.cs" />
     <Compile Include="Infraestrutura\Provider\Concrete\CustomAutenticacaoProvider.cs" />
