tratando requisicoes com acesso negado aula 49

--- a/SisVest.DomaninModel/App.config
+++ b/SisVest.DomaninModel/App.config
@@ -12,7 +12,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <!--<add name="InstanciaLocal" connectionString="Data Source=.\INSTANCIALOCAL; Initial Catalog=SisVest; Integrated Security = true;" providerName="System.Data.SqlClient" />-->
-    <add name="InstanciaLocal"  connectionString="Data Source=.\LocalInstance; Initial Catalog=SisVest; Integrated Security = true;"  providerName="System.Data.SqlClient"  />
+    <add name="InstanciaLocal" connectionString="Data Source=.\INSTANCIALOCAL; Initial Catalog=SisVest; Integrated Security = true;" providerName="System.Data.SqlClient" />
+    <!--<add name="InstanciaLocal"  connectionString="Data Source=.\LocalInstance; Initial Catalog=SisVest; Integrated Security = true;"  providerName="System.Data.SqlClient"  />-->
   </connectionStrings>
 </configuration>
