CRUD completo para Admin aula 50

--- a/SisVest.WebUI/Web.config
+++ b/SisVest.WebUI/Web.config
@@ -86,7 +86,7 @@
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
   </entityFramework>
   <connectionStrings>
-    <add name="InstanciaLocal" connectionString="Data Source=.\INSTANCIALOCAL; Initial Catalog=SisVest; Integrated Security = true;" providerName="System.Data.SqlClient" />
-    <!--<add name="InstanciaLocal"  connectionString="Data Source=.\LocalInstance; Initial Catalog=SisVest; Integrated Security = true;"  providerName="System.Data.SqlClient"  />-->
+    <!--<add name="InstanciaLocal" connectionString="Data Source=.\INSTANCIALOCAL; Initial Catalog=SisVest; Integrated Security = true;" providerName="System.Data.SqlClient" />-->
+    <add name="InstanciaLocal"  connectionString="Data Source=.\LocalInstance; Initial Catalog=SisVest; Integrated Security = true;"  providerName="System.Data.SqlClient"  />
   </connectionStrings>
 </configuration>
