--- a/SisVest.WebUI/SisVest.WebUI.csproj
+++ b/SisVest.WebUI/SisVest.WebUI.csproj
@@ -126,6 +126,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\AdminController.cs" />
     <Compile Include="Controllers\AutenticacaoController.cs" />
     <Compile Include="Controllers\CursoController.cs" />
     <Compile Include="Controllers\VestibularController.cs" />
@@ -139,6 +140,7 @@
     <Compile Include="Infraestrutura\NinjectDependencyResolver.cs" />
     <Compile Include="Infraestrutura\Provider\Abstract\IAutenticacaoProvider.cs" />
     <Compile Include="Infraestrutura\Provider\Concrete\CustomAutenticacaoProvider.cs" />
+    <Compile Include="Models\AdminModel.cs" />
     <Compile Include="Models\AutenticacaoModel.cs" />
     <Compile Include="Models\CursoModel.cs" />
     <Compile Include="Models\VestibularModel.cs" />
@@ -300,6 +302,10 @@
     <Content Include="Views\Vestibular\Delete.cshtml" />
     <Content Include="Views\Vestibular\Create.cshtml" />
     <Content Include="Views\Autenticacao\Entrar.cshtml" />
+    <Content Include="Views\Admin\Index.cshtml" />
+    <Content Include="Views\Admin\Create.cshtml" />
+    <Content Include="Views\Admin\Edit.cshtml" />
+    <Content Include="Views\Admin\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
