--- a/SisVest.WebUI/SisVest.WebUI.csproj
+++ b/SisVest.WebUI/SisVest.WebUI.csproj
@@ -147,6 +147,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\Scripts\Admin\CreateAdmin.js" />
+    <Content Include="Content\Scripts\strength.js" />
+    <Content Include="Content\Scripts\strength.min.js" />
+    <Content Include="Content\Style\strength.css" />
     <Content Include="Content\themes\base\images\ui-bg_flat_0_aaaaaa_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_flat_75_ffffff_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_glass_55_fbf9ee_1x400.png" />
