definindo um Bundle para minificacao em ambiente de producao aula 88

--- a/SisVest.Test/App.config
+++ b/SisVest.Test/App.config
@@ -11,8 +11,23 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <!--<add name="InstanciaLocal" connectionString="Data Source=.\INSTANCIALOCAL; Initial Catalog=SisVest; Integrated Security = true;" providerName="System.Data.SqlClient" />-->
-    <add name="InstanciaLocal"  connectionString="Data Source=.\LocalInstance; Initial Catalog=SisVest; Integrated Security = true;"  providerName="System.Data.SqlClient"  />
+    <add name="InstanciaLocal" connectionString="Data Source=.\InstanciaLocal; Initial Catalog=SisVest; Integrated Security = true;" providerName="System.Data.SqlClient" />
+    <!--<add name="InstanciaLocal"  connectionString="Data Source=.\LocalInstance; Initial Catalog=SisVest; Integrated Security = true;"  providerName="System.Data.SqlClient"  />-->
   </connectionStrings>
 
+  <runtime>
+
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+
+      <dependentAssembly>
+
+        <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+
+        <bindingRedirect oldVersion="0.0.0.0-1.5.2.14234" newVersion="1.5.2.14234" />
+
+      </dependentAssembly>
+
+    </assemblyBinding>
+
+  </runtime>
 </configuration>
