--- a/SisVest.WebUI/packages.config
+++ b/SisVest.WebUI/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Antlr" version="3.4.1.9004" targetFramework="net451" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net451" />
   <package id="jQuery" version="1.7.1.1" targetFramework="net451" />
   <package id="jQuery.UI.Combined" version="1.8.20.1" targetFramework="net451" />
@@ -8,6 +9,7 @@
   <package id="Microsoft.AspNet.Providers.Core" version="1.1" targetFramework="net451" />
   <package id="Microsoft.AspNet.Providers.LocalDB" version="1.1" targetFramework="net451" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net451" />
+  <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.2" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.2" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.2" targetFramework="net451" />
@@ -19,4 +21,5 @@
   <package id="Modernizr" version="2.5.3" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net451" />
   <package id="Ninject" version="3.2.2.0" targetFramework="net451" />
+  <package id="WebGrease" version="1.5.2" targetFramework="net451" />
 </packages>
